...
        Box(Modifier.fillMaxWidth(), contentAlignment = Alignment.TopCenter) {
            Column(
                modifier = Modifier
                    .fillMaxWidth()
                    .fillMaxHeight(EmojiPickerExpandedHeightFraction)
                    .widthIn(max = EmojiPickerMaximumWidth)
                    .testTag("emoji.picker"),
            ) {
                TextField(
                    value = query,
                    onValueChange = { query = it },
                    modifier = Modifier
                        .fillMaxWidth()
...
